Un-hardcoded leaderboard rank list to fix alignment and variability

--- a/css/styleLead.css
+++ b/css/styleLead.css
@@ -17,16 +17,6 @@
 		
 	}
  
-	#rankOverlap{
-		background-color:black;
-		color:yellow;
-		position: absolute;
-		top:50px;
-		left: 10px;
-		
-		
-	}
- 
 	th{
 		
 		background: -webkit-linear-gradient(#00CCFF, #000099); 
